--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <h1>My Cool Website - Html</h1>
         <p>HTML IS Cool</p>
         <img src="https://cdn-useast1.kapwing.com/static/templates/knee-surgery-tomorrow-meme-template-KAI3QQ5SCkNXSKMs-full.jpg">
+        <blockquote>The human mind was forged in the crucible of coalitional conflict</blockquote>
     </body>
 </html>
