--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://cdn-useast1.kapwing.com/static/templates/knee-surgery-tomorrow-meme-template-KAI3QQ5SCkNXSKMs-full.jpg">
         <blockquote>The human mind was forged in the crucible of coalitional conflict</blockquote>
         <blockquote>Woohoo</blockquote>
-        <button onclick="changeQuote()">
+        <button onclick="changeQuote()">Change Quote
 
         </button>
         <script>
